adicionada semantica ao openidConnect

--- a/openid-connect-client/pom.xml
+++ b/openid-connect-client/pom.xml
@@ -18,6 +18,8 @@
 <project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
 	xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
 
+
+
 	<modelVersion>4.0.0</modelVersion>
 	<parent>
 		<artifactId>openid-connect-parent</artifactId>
@@ -29,6 +31,14 @@
 	<description>OpenID Connect Client filter for Spring Security</description>
 	<name>OpenID Connect Client</name>
 	<dependencies>
+
+	<!-- SEMANTIC BEGIN -->
+		<dependency>
+			<groupId>br.com.ivansalvadori</groupId>
+			<artifactId>gson-ld</artifactId>
+			<version>0.0.1-SNAPSHOT</version>	
+	<!-- SEMANTIC END -->	
+		</dependency>
 		<dependency>
 			<groupId>org.mitre</groupId>
 			<artifactId>openid-connect-common</artifactId>
